# deepin-deepinid-plugin

./: .gitignore  CMakeLists.txt  lupdate.sh
.reuse/: dep5
.tx/: config
dcc-deepinid-plugin/: CMakeLists.txt  cryptor.cpp  cryptor.h  syncmodel.cpp  syncmodel.h  syncmodule.cpp  syncmodule.h  syncplugin.cpp  syncplugin.h  syncwidget.cpp  syncwidget.h  syncworker.cpp  syncworker.h  trans_string.cpp  trans_string.h  utils.cpp  utils.h
dcc-deepinid-plugin/icons/: deepinid.qrc
dcc-deepinid-plugin/icons/web/: error.html
dcc-deepinid-plugin/operation/: deepiniddbusproxy.cpp  deepiniddbusproxy.h  syncdbusproxy.cpp  syncdbusproxy.h  syncworker.cpp
dcc-deepinid-plugin/pages/: avatarwidget.cpp  avatarwidget.h  cloudsync.cpp  cloudsync.h  devicesync.cpp  devicesync.h  downloadurl.cpp  downloadurl.h  login.cpp  login.h  logininfo.cpp  logininfo.h  logininfodetail.cpp  logininfodetail.h  securitymanage.cpp  securitymanage.h  singleitem.cpp  singleitem.h  syncitemwidget.cpp  syncitemwidget.h  syncstateicon.cpp  syncstateicon.h  userdialog.cpp  userdialog.h  wechatobject.cpp  wechatobject.h
dcc-deepinid-plugin/window/: syncwidget.cpp  uosidplugin.cpp  uosidplugin.h
dcc-deepinid-plugin/window/widgets/: downloadurl.cpp  login.cpp  logininfo.cpp  logininfo.h  logininfodetail.cpp  logininfodetail.h
debian/: changelog  control  copyright
translations/: dcc-deepinid-plugin.ts  dcc-deepinid-plugin_ady.ts  dcc-deepinid-plugin_af.ts  dcc-deepinid-plugin_ak.ts  dcc-deepinid-plugin_am_ET.ts  dcc-deepinid-plugin_ar.ts  dcc-deepinid-plugin_ar_EG.ts  dcc-deepinid-plugin_ast.ts  dcc-deepinid-plugin_az.ts  dcc-deepinid-plugin_bg.ts  dcc-deepinid-plugin_bn.ts  dcc-deepinid-plugin_bo.ts  dcc-deepinid-plugin_bqi.ts  dcc-deepinid-plugin_br.ts  dcc-deepinid-plugin_ca.ts  dcc-deepinid-plugin_cgg.ts  dcc-deepinid-plugin_cs.ts  dcc-deepinid-plugin_da.ts  dcc-deepinid-plugin_de.ts  dcc-deepinid-plugin_de_CH.ts  dcc-deepinid-plugin_el.ts  dcc-deepinid-plugin_en_AU.ts  dcc-deepinid-plugin_en_GB.ts  dcc-deepinid-plugin_en_NO.ts  dcc-deepinid-plugin_en_US.ts  dcc-deepinid-plugin_eo.ts  dcc-deepinid-plugin_es.ts  dcc-deepinid-plugin_es_MX.ts  dcc-deepinid-plugin_et.ts  dcc-deepinid-plugin_eu.ts  dcc-deepinid-plugin_fa.ts  dcc-deepinid-plugin_fi.ts  dcc-deepinid-plugin_fil.ts  dcc-deepinid-plugin_fr.ts  dcc-deepinid-plugin_gl_ES.ts  dcc-deepinid-plugin_he.ts  dcc-deepinid-plugin_hi_IN.ts  dcc-deepinid-plugin_hr.ts  dcc-deepinid-plugin_hu.ts  dcc-deepinid-plugin_hy.ts  (+53 more)
